--- a/git_turnpage_demo/res/layout/mainui.xml
+++ b/git_turnpage_demo/res/layout/mainui.xml
@@ -18,5 +18,12 @@
     	 android:layout_height="wrap_content"
     	 android:layout_marginTop="20dp"
     	 android:text="@string/btn_text_2"/>
+    
+    <Button 
+         android:id="@+id/btn3"
+         android:layout_width="match_parent"
+    	 android:layout_height="wrap_content"
+    	 android:layout_marginTop="20dp"
+    	 android:text="@string/btn_text_3"/>
         
 </LinearLayout>
